<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AddConsumoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ET_nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/digite_nome_consumo"
                android:textColor="@color/colorblack"
                android:textSize="15sp" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ET_valorUnitario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_valor_unitario"
                    android:inputType="numberDecimal"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ET_quantidade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/digite_quantidade"
                    android:inputType="number"
                    android:textColor="@color/colorblack"
                    android:textSize="15sp" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/total"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/TV_valorTotal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/zero"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.LinearLayoutCompat>